Bug 223094 - sensor log does not work
Summary: sensor log does not work
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
: 258552 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-01-17 10:42 UTC by m.wege
Modified: 2011-12-04 07:10 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2010-01-17 10:42:07 UTC
Version:           4.3.90 (KDE 4.3.90 (KDE 4.4 RC1)) (using 4.3.90 (KDE 4.3.90 (KDE 4.4 RC1)), Kubuntu packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.31-18-generic

I tryed to set up some sensor logfiles for the fan and temparatures. I choose a filename for each sensor. The sensors themselves seem to work, because a the same time, if I choose a diagram of the sensor it works. The sensor log files are not even created and at the beginning of the line the sensor is marked with a red X without indicating me what is wrong.
Comment 1 Martin Koller 2010-12-02 11:59:36 UTC
*** Bug 258552 has been marked as a duplicate of this bug. ***
Comment 2 Maťo 2011-02-18 01:40:12 UTC
Have experienced similar problem !
Comment 3 Francesco Lazzarotto 2011-10-10 14:19:39 UTC
I'm experiencing the same problem with ksysguard from kde 4.4.x and kde 4.6.y
Everything works fine for my needs in ksysguard except the file logging function.
I've followed the user manual to set up a SensorLogger log values on a file, but 
I can't select the “Start Logging” option right clicking because a do not have
this option when I right click on the line ..

From the handbook "System Monitoring with KSysGuard"
http://www.geocities.ws/kingttx/Linux/SystemMonitoring.pdf

"... Notice we're not logging anything yet; to start logging, rightclick
anywhere on the line of the entry
and select “Start Logging”.
Comment 4 Francesco Lazzarotto 2011-10-15 09:30:41 UTC
Hi all, I fixed the bug I've found and now I'm using the sensor file logger functionality on my applications. I sent my modifications to the ksysguard mantainer that is going to commit the fix to the official release.
Good work.

Francesco.
Comment 5 John Tapsell 2011-12-04 07:10:07 UTC
Git commit fe4cbabcf7a50b09292699e01536699727efa2ca by John Tapsell.
Committed on 04/12/2011 at 08:07.
Pushed by johnflux into branch 'master'.

SensorLogger - Fix actually logging the values to file

Patch by Francesco Lazzarotto - Thank you

BUG: 223094

M  +5    -0    ksysguard/gui/SensorDisplayLib/SensorLogger.cpp
M  +1    -0    ksysguard/gui/SensorDisplayLib/SensorLogger.h

http://commits.kde.org/kde-workspace/fe4cbabcf7a50b09292699e01536699727efa2ca