SensorLogger - Fix actually logging the values to file

Patch by Francesco Lazzarotto - Thank you

BUG: 223094