gui/SensorDisplayLib/SensorLogger.h
@@ -79,6 +79,7 @@ class LogSensor : public QObject, public KSGRD::SensorClient
 
   protected:
     virtual void timerTick();
+    virtual void timerEvent ( QTimerEvent * event );
 
   private:
     QString mSensorName;
